--- a/bio.html
+++ b/bio.html
@@ -14,6 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
   <link rel="stylesheet" href="assets/css/main.css" />
   <base target="_blank">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -32,61 +33,85 @@
   <!-- Main -->
   <div id="main">
 
-    <!-- Welcome -->
-    <section id="welcome">
+    <!-- About Me -->
+    <section id="about_me">
       <header class="major">
-        <h1>Biography</h1>
+        <h1>About Me</h1>
       </header>
-      <p>I'm currently a postdoctoral fellow at the <a href="https://web.mit.edu/sparklab/">MIT-SPARK</a> Lab lead
-        by <a href="https://lucacarlone.mit.edu/">Prof. Luca
-          Carlone</a> at the <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a>,
-        working on hierarchical scene understanding in complex and dynamic environments.
-      </p>
+      <p> A brief overview of my academic bio, full CV, selected awards, recognitions, and invited talks, as well as
+        personal interests. </p>
 
-      <p>Before that, I briefly was a postdoctoral researcher at the <a href="https://asl.ethz.ch/">Autonomous
+      <ul class="actions fit">
+        <li><a href="#bio" class="button fit" target="_self">Biography and CV</a></li>
+        <li><a href="#awards" class="button fit" target="_self">Awards and Recognitions</a></li>
+        <li><a href="#talks" class="button fit" target="_self">Invited Talks</a></li>
+        <li><a href="#interests" class="button fit" target="_self">Personal Interests</a></li>
+      </ul>
+    </section>
+
+    <!-- Bio -->
+    <section id="bio">
+      <header class="major">
+        <h1>Short Bio</h1>
+      </header>
+      <p>Lukas Schmid is currently a postdoctoral research fellow at the <a href="https://web.mit.edu/sparklab/">MIT
+          SPARK</a> Lab lead
+        by <a href="https://lucacarlone.mit.edu/">Prof. Luca
+          Carlone</a> at the <a href="https://www.mit.edu/">Massachusetts Institute of Technology (MIT)</a>.
+        Before that, he briefly was a postdoctoral researcher at the <a href="https://asl.ethz.ch/">Autonomous
           Systems Lab (ASL)</a> lead by
         <a href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
           Roland Siegwart</a> at <a href="https://ethz.ch/en.html">ETH Zürich</a>.
-        I obtained my PhD in 2022 from ETH Zürich,
-        working at ASL with <a
+        He earned his PhD in 2022 from ETH Zürich,
+        advised by <a
           href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
           Roland Siegwart</a>, <a href="https://n.ethz.ch/~cesarc/">Dr. Cesar
-          Cadena</a>, <a href="https://www.nietojuan.com/">Dr. Juan
-          Nieto</a> and in collaboration with the <a
+          Cadena</a>, and <a href="https://www.nietojuan.com/">Dr. Juan
+          Nieto</a>, where he also obtained his M.Sc. in Robotics, Systems, and Control (RSC) in 2019.
+        During his PhD, he was a visiting researcher at the <a
           href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/">Microsoft
           Mixed Reality and AI Lab</a> lead by <a href="https://people.inf.ethz.ch/pomarc/">Prof. Marc
-          Pollefeys</a>. For my thesis research I was awarded the <a
-          href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal.html">ETH Medal</a>
-        for outstanding PhD Theses.
-        Before that, I obtained my M.Sc. in Robotics, Systems, and Control (RSC) in 2019 also from ETH, which I
-        graduated with distinction, and was awarded the <a
-          href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html">Willi Studer
-          Prize</a> for the best
-        graduate and the
-        <a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html">ETH
-          Medal</a> for outstanding master theses.
+          Pollefeys</a>.
       </p>
 
-      <p> My main research interests lie in autonomy for intelligent mobile systems. In particular, I focus on
-        active
-        and passive perception and understanding of complex environments for robotic interaction and augmented
-        reality.
-        This includes building dense geometric and semantic representations of an environment, scene abstraction
-        and
-        understanding, lifelong learning and mapping, as well as active path planning to build these
-        representations and
-        abstractions autonomously and in unknown environments. </p>
+      <p> His work has been recognized with several awards and honors, including the <a
+          href="https://github.com/MIT-SPARK/Khronos">Best Paper Award</a> at <a
+          href="https://roboticsconference.org/">Robotics: Science and Systems (RSS)</a>, the <a
+          href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal.html">ETH Medal</a>
+        for outstanding PhD theses, the <a
+          href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html">ETH
+          Medal</a> for outstanding master theses, the <a
+          href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html">Willi Studer
+          Prize</a> for the best graduate of the year at ETH, the first place in the "Nothing
+        Stands Still" <a href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/overview">2024
+          Hilti SLAM challenge</a>, and a <a href="https://data.snf.ch/grants/grant/214489">Swiss National Science
+          Foundation</a> postdoc-mobility career
+        award.
+      </p>
+
+      <p> His main research interests is in autonomy for intelligent mobile systems, where he focuses on active and
+        passive 3D
+        perception and understanding of complex, dynamic, and changing environments for robotic interaction and
+        augmented reality. This includes research on dense geometric and semantic scene representations, scene
+        abstraction and understanding, as well as detection and prediction of moving and changing entities.
+        He complements this with research on lifelong learning and mapping, as well as active path planning to build
+        these representations autonomously in unknown environments and enable continuous improvement of a robot's scene
+        model and perception capabilities.
+        While his work is grounded in rigorous theory, his methods are demonstrated on-board fully autonomous mobile
+        robots and drones in complex real-world scenarios.
+      </p>
 
       <ul class="actions">
         <li><a href="download/CV.pdf" download="CV_LukasSchmid.pdf" class="button icon solid fa-download">Download Full
             CV (Updated
-            7/2024)</a></li>
+            8/2024)</a></li>
       </ul>
     </section>
 
     <!-- Awards -->
     <section id="awards">
       <h1>Awards</h1>
+      Selected awards and recognitions:
       <ul>
         <li><strong>Best Paper Award</strong> at <a href="https://roboticsconference.org/"> Robotics: Science
             and Systems (RSS)</a> for our work on <a href="https://github.com/MIT-SPARK/Khronos">Khronos</a>, 2024.</li>
@@ -126,25 +151,102 @@
       <ul style="list-style-type: none; counter-reset: elementcounter; padding-left: 0;" id="listTalks"></ul>
     </section>
 
-    <!-- Footer -->
-    <footer id="footer"> </footer>
+    <!-- Personal Interests -->
+    <section id="interests">
+      <h1>Personal Interests</h1>
+      <p>
+        <!-- <div class="image left">
+        <div class="row gtr-50 gtr-uniform">
+          <div class="col-12"><span class="image fit"><img src="images/code/3d_vsg.png" alt="" /></span></div>
+          <div class="col-6"><span class="image fit"><img src="images/code/active_3d.gif" alt="" /></span></div>
+          <div class="col-6"><span class="image fit"><img src="images/code/airsim.png" alt="" /></span></div>
+          <div class="col-4"><span class="image fit"><img src="images/code/config.jpg" alt="" /></span></div>
+          <div class="col-4"><span class="image fit"><img src="images/code/clio.jpg" alt="" /></span></div>
+        </div>
+      </div> -->
+        <!-- <span> -->
+        <!-- <p> -->
+        Besides my work, I am a passionate classical pianist (four times winner of the 1<sup>st</sup> prize at the
+        Thurgaue Youth Music Competition, three times with award).
+        <!-- </p>        <p> -->
+        I enjoy team sports such as volleyball, especially beach volleyball during summer, Wing Chun Kung Fu, or
+        Running.
+        <!-- </p> -->
+        <!-- </span> -->
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.poptrox.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
+        <!-- <p> -->
+        <!-- <div class="image right">
+        <div class="row gtr-50 gtr-uniform">
+          <div class="col-12"><span class="image fit"><img src="images/code/3d_vsg.png" alt="" /></span></div>
+          <div class="col-6"><span class="image fit"><img src="images/code/active_3d.gif" alt="" /></span></div>
+          <div class="col-6"><span class="image fit"><img src="images/code/airsim.png" alt="" /></span></div>
+          <div class="col-4"><span class="image fit"><img src="images/code/config.jpg" alt="" /></span></div>
+          <div class="col-4"><span class="image fit"><img src="images/code/clio.jpg" alt="" /></span></div>
+        </div>
+      </div> -->
+        <!-- <span> -->
+        <!-- <p> -->
+        I love exploring, tasting, and presenting wines and making cocktails (WSET Level 2 Award in Wines, WSET Level
+        2
+        Award in Spirits, both passed with distinction), and sharing these experiences with others.
+        <!-- </p>
+        <p> -->
+        For recreation, I relish various water sports such as scuba diving (PADI Advanced Open Water Diver), sailing
+        (Swiss Yachting Certificate, MIT provisional, 420, laser, windsurf, and lynx catboat rating) as well as wave,
+        wake, and wind surfing.
+        <!-- </p> -->
+        <!-- </span> -->
+        <!-- </p> -->
 
-    <!-- Import the json of talks and build the list. -->
-    <script src="publications/talks.js"></script>
-    <script src="assets/js/build-talks.js"></script>
-    <script type="text/javascript">
-      buildTalks(pubTalks, "listTalks");
-    </script>
 
-    <script src="assets/js/build-header-footer.js"></script>
-    <script src="assets/js/main.js"></script>
+        <!--
+      <p>
+      <div class="image left">
+        <div class="row gtr-50 gtr-uniform">
+          <div class="col-12"><span class="image fit"><img src="images/code/3d_vsg.png" alt="" /></span></div>
+          <div class="col-6"><span class="image fit"><img src="images/code/active_3d.gif" alt="" /></span></div>
+          <div class="col-6"><span class="image fit"><img src="images/code/airsim.png" alt="" /></span></div>
+          <div class="col-4"><span class="image fit"><img src="images/code/config.jpg" alt="" /></span></div>
+          <div class="col-4"><span class="image fit"><img src="images/code/clio.jpg" alt="" /></span></div>
+        </div>
+      </div>
+      </p>
+
+      <h5>Left &amp; Right</h5>
+      <p><span class="image right"><img src="images/avatar.png" alt="" /></span>Fringilla nisl. Donec accumsan
+        interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus
+        vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac
+        pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus
+        vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac
+        pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
+        Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac
+        adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus
+        euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac
+        adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+
+    </section> -->
+  </div>
+
+
+  <!-- Footer -->
+  <footer id="footer"> </footer>
+
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.poptrox.min.js"></script>
+  <script src="assets/js/browser.min.js"></script>
+  <script src="assets/js/breakpoints.min.js"></script>
+  <script src="assets/js/util.js"></script>
+
+  <!-- Import the json of talks and build the list. -->
+  <script src="publications/talks.js"></script>
+  <script src="assets/js/build-talks.js"></script>
+  <script type="text/javascript">
+    buildTalks(pubTalks, "listTalks");
+  </script>
+
+  <script src="assets/js/build-header-footer.js"></script>
+  <script src="assets/js/main.js"></script>
 
 </body>
 
