Update interests visuals

--- a/bio.html
+++ b/bio.html
@@ -42,7 +42,7 @@
         personal interests. </p>
 
       <ul class="actions fit">
-        <li><a href="#bio" class="button fit" target="_self">Biography and CV</a></li>
+        <li><a href="#bio" class="button fit" target="_self">Biography</a></li>
         <li><a href="#awards" class="button fit" target="_self">Awards and Recognitions</a></li>
         <li><a href="#talks" class="button fit" target="_self">Invited Talks</a></li>
         <li><a href="#interests" class="button fit" target="_self">Personal Interests</a></li>
@@ -52,7 +52,7 @@
     <!-- Bio -->
     <section id="bio">
       <header class="major">
-        <h1>Short Bio</h1>
+        <h1>Biography</h1>
       </header>
       <p>Lukas Schmid is currently a postdoctoral research fellow at the <a href="https://web.mit.edu/sparklab/">MIT
           SPARK</a> Lab lead
@@ -110,7 +110,7 @@
 
     <!-- Awards -->
     <section id="awards">
-      <h1>Awards</h1>
+      <h1>Awards and Recognitions</h1>
       Selected awards and recognitions:
       <ul>
         <li><strong>Best Paper Award</strong> at <a href="https://roboticsconference.org/"> Robotics: Science
