update personal interests

--- a/bio.html
+++ b/bio.html
@@ -154,77 +154,31 @@
     <!-- Personal Interests -->
     <section id="interests">
       <h1>Personal Interests</h1>
+      <div class="video left">
+        <div class="video fit"><video src="images/interests/piano.mp4" controls></video></div>
+      </div>
       <p>
-        <!-- <div class="image left">
-        <div class="row gtr-50 gtr-uniform">
-          <div class="col-12"><span class="image fit"><img src="images/code/3d_vsg.png" alt="" /></span></div>
-          <div class="col-6"><span class="image fit"><img src="images/code/active_3d.gif" alt="" /></span></div>
-          <div class="col-6"><span class="image fit"><img src="images/code/airsim.png" alt="" /></span></div>
-          <div class="col-4"><span class="image fit"><img src="images/code/config.jpg" alt="" /></span></div>
-          <div class="col-4"><span class="image fit"><img src="images/code/clio.jpg" alt="" /></span></div>
-        </div>
-      </div> -->
-        <!-- <span> -->
-        <!-- <p> -->
         Besides my work, I am a passionate classical pianist (four times winner of the 1<sup>st</sup> prize at the
-        Thurgaue Youth Music Competition, three times with award).
-        <!-- </p>        <p> -->
-        I enjoy team sports such as volleyball, especially beach volleyball during summer, Wing Chun Kung Fu, or
-        Running.
-        <!-- </p> -->
-        <!-- </span> -->
-
-        <!-- <p> -->
-        <!-- <div class="image right">
-        <div class="row gtr-50 gtr-uniform">
-          <div class="col-12"><span class="image fit"><img src="images/code/3d_vsg.png" alt="" /></span></div>
-          <div class="col-6"><span class="image fit"><img src="images/code/active_3d.gif" alt="" /></span></div>
-          <div class="col-6"><span class="image fit"><img src="images/code/airsim.png" alt="" /></span></div>
-          <div class="col-4"><span class="image fit"><img src="images/code/config.jpg" alt="" /></span></div>
-          <div class="col-4"><span class="image fit"><img src="images/code/clio.jpg" alt="" /></span></div>
-        </div>
-      </div> -->
-        <!-- <span> -->
-        <!-- <p> -->
+        Thurgau Youth Music Competition, three times with award), but also used to play in piano trios and jazz ensembles.
+      </p>
+      <div class="image right">
+        <img src="images/interests/combined.png" alt="" />
+      </div>
+      <p>
+        I enjoy team sports such as volleyball, especially beach volleyball during summer, working out, or
+        Running. I also used to play Tennis and spent many years doing Wing Chun Kung Fu.
+      </p>
+      <p>
         I love exploring, tasting, and presenting wines and making cocktails (WSET Level 2 Award in Wines, WSET Level
         2
         Award in Spirits, both passed with distinction), and sharing these experiences with others.
-        <!-- </p>
-        <p> -->
+      </p>
+      <p>
         For recreation, I relish various water sports such as scuba diving (PADI Advanced Open Water Diver), sailing
         (Swiss Yachting Certificate, MIT provisional, 420, laser, windsurf, and lynx catboat rating) as well as wave,
         wake, and wind surfing.
-        <!-- </p> -->
-        <!-- </span> -->
-        <!-- </p> -->
-
-
-        <!--
-      <p>
-      <div class="image left">
-        <div class="row gtr-50 gtr-uniform">
-          <div class="col-12"><span class="image fit"><img src="images/code/3d_vsg.png" alt="" /></span></div>
-          <div class="col-6"><span class="image fit"><img src="images/code/active_3d.gif" alt="" /></span></div>
-          <div class="col-6"><span class="image fit"><img src="images/code/airsim.png" alt="" /></span></div>
-          <div class="col-4"><span class="image fit"><img src="images/code/config.jpg" alt="" /></span></div>
-          <div class="col-4"><span class="image fit"><img src="images/code/clio.jpg" alt="" /></span></div>
-        </div>
-      </div>
       </p>
 
-      <h5>Left &amp; Right</h5>
-      <p><span class="image right"><img src="images/avatar.png" alt="" /></span>Fringilla nisl. Donec accumsan
-        interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus
-        vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac
-        pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus
-        vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac
-        pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
-        Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac
-        adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus
-        euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac
-        adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
-
-    </section> -->
   </div>
 
 
