refactor video embedding

--- a/bio.html
+++ b/bio.html
@@ -154,12 +154,12 @@
     <!-- Personal Interests -->
     <section id="interests">
       <h1>Personal Interests</h1>
-      <div class="video left">
-        <div class="video fit"><video src="images/interests/piano.mp4" controls></video></div>
-      </div>
+      <div style="margin: 0 1em 0 0; width: 35%; max-width: 35%; float: left;"><video src="images/interests/piano.mp4"
+          controls style="border-radius: 0.35em;"></video></div>
       <p>
         Besides my work, I am a passionate classical pianist (four times winner of the 1<sup>st</sup> prize at the
-        Thurgau Youth Music Competition, three times with award), but also used to play in piano trios and jazz ensembles.
+        Thurgau Youth Music Competition, three times with award), but also used to play in piano trios and jazz
+        ensembles.
       </p>
       <div class="image right">
         <img src="images/interests/combined.png" alt="" />
