refactor ideo embedding pt 2

--- a/bio.html
+++ b/bio.html
@@ -155,7 +155,7 @@
     <section id="interests">
       <h1>Personal Interests</h1>
       <div style="margin: 0 1em 0 0; width: 35%; max-width: 35%; float: left;"><video src="images/interests/piano.mp4"
-          controls style="border-radius: 0.35em;"></video></div>
+          controls style="border-radius: 0.35em; width: 100%"></video></div>
       <p>
         Besides my work, I am a passionate classical pianist (four times winner of the 1<sup>st</sup> prize at the
         Thurgau Youth Music Competition, three times with award), but also used to play in piano trios and jazz
