--- a/bio.html
+++ b/bio.html
@@ -75,7 +75,7 @@
       </p>
 
       <p> His work has been recognized with several awards and honors, including the <a
-          href="https://github.com/MIT-SPARK/Khronos">Best Paper Award</a> at <a
+          href="https://github.com/MIT-SPARK/Khronos">Outstanding Systems Paper Award</a> at <a
           href="https://roboticsconference.org/">Robotics: Science and Systems (RSS)</a>, the <a
           href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal.html">ETH Medal</a>
         for outstanding PhD theses, the <a
@@ -113,7 +113,8 @@
       <h1>Awards and Recognitions</h1>
       Selected awards and recognitions:
       <ul>
-        <li><strong>Best Paper Award</strong> at <a href="https://roboticsconference.org/"> Robotics: Science
+        <li><strong>Outstanding Systems Paper Award</strong> at <a href="https://roboticsconference.org/"> Robotics:
+            Science
             and Systems (RSS)</a> for our work on <a href="https://github.com/MIT-SPARK/Khronos">Khronos</a>, 2024.</li>
         <li><a href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/leaderboard/18"><strong>First
               Place</strong></a> in the <a
@@ -165,8 +166,8 @@
         <img src="images/interests/combined.png" alt="" />
       </div>
       <p>
-        I enjoy team sports such as volleyball, especially beach volleyball during summer, working out, or
-        Running. I also used to play Tennis and spent many years doing Wing Chun Kung Fu.
+        I enjoy team sports such as volleyball, especially beach volleyball during summer, working out, and
+        running. I also used to play Tennis and spent many years doing Wing Chun Kung Fu.
       </p>
       <p>
         I love exploring, tasting, and presenting wines and making cocktails (WSET Level 2 Award in Wines, WSET Level
