--- a/bio.html
+++ b/bio.html
@@ -82,11 +82,9 @@
           href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html">ETH
           Medal</a> for outstanding master theses, the <a
           href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html">Willi Studer
-          Prize</a> for the best graduate of the year at ETH, the first place in the "Nothing
-        Stands Still" <a href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/overview">2024
+          Prize</a> for the best graduate of the year at ETH, the first place in the <a href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/overview">2024
           Hilti SLAM challenge</a>, and a <a href="https://data.snf.ch/grants/grant/214489">Swiss National Science
-          Foundation</a> postdoc-mobility career
-        award.
+          Foundation</a> postdoc-mobility fellowship.
       </p>
 
       <p> His main research interests is in autonomy for intelligent mobile systems, where he focuses on active and
