--- a/bio.html
+++ b/bio.html
@@ -124,8 +124,7 @@
             href="https://www.research-collection.ethz.ch/handle/20.500.11850/583169">Robust Active
             Perception and Volumetric Mapping in Unknown Changing Environments</a>", 2023.</li>
         <li><a href="https://data.snf.ch/grants/grant/214489"><strong>Swiss National Science Foundation
-              Postdoc-Mobility Career
-              Grant</strong></a> for the project "<a href="https://data.snf.ch/grants/grant/214489">Robust
+              Postdoc-Mobility Fellowship</strong></a> for the project "<a href="https://data.snf.ch/grants/grant/214489">Robust
             Robotic Scene Understanding in Complex, Changing
             Environments
             using 3D Dynamic Scene Graphs</a>", 2022.</li>
