--- a/bio.html
+++ b/bio.html
@@ -82,7 +82,8 @@
           href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html">ETH
           Medal</a> for outstanding master theses, the <a
           href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html">Willi Studer
-          Prize</a> for the best graduate of the year at ETH, the first place in the <a href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/overview">2024
+          Prize</a> for the best graduate of the year at ETH, the first place in the <a
+          href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/overview">2024
           Hilti SLAM challenge</a>, and a <a href="https://data.snf.ch/grants/grant/214489">Swiss National Science
           Foundation</a> postdoc-mobility fellowship.
       </p>
@@ -111,6 +112,8 @@
       <h1>Awards and Recognitions</h1>
       Selected awards and recognitions:
       <ul>
+        <li><strong>RSS: Pioneer</strong> at <a href="https://roboticsconference.org/program/pioneers/">Robotics:
+            Science and Systems (RSS)</a>, 2025.</li>
         <li><strong>Outstanding Systems Paper Award</strong> at <a href="https://roboticsconference.org/"> Robotics:
             Science
             and Systems (RSS)</a> for our work on <a href="https://github.com/MIT-SPARK/Khronos">Khronos</a>, 2024.</li>
@@ -124,7 +127,8 @@
             href="https://www.research-collection.ethz.ch/handle/20.500.11850/583169">Robust Active
             Perception and Volumetric Mapping in Unknown Changing Environments</a>", 2023.</li>
         <li><a href="https://data.snf.ch/grants/grant/214489"><strong>Swiss National Science Foundation
-              Postdoc-Mobility Fellowship</strong></a> for the project "<a href="https://data.snf.ch/grants/grant/214489">Robust
+              Postdoc-Mobility Fellowship</strong></a> for the project "<a
+            href="https://data.snf.ch/grants/grant/214489">Robust
             Robotic Scene Understanding in Complex, Changing
             Environments
             using 3D Dynamic Scene Graphs</a>", 2022.</li>
