--- a/bio.html
+++ b/bio.html
@@ -59,12 +59,12 @@
         <h1>Biography</h1>
       </header>
       <p>Lukas Schmid is currently a research scientist at the <a href="https://web.mit.edu/sparklab/">MIT
-          SPARK</a> Lab lead
+          SPARK</a> Lab led
         by <a href="https://lucacarlone.mit.edu/">Prof. Luca
           Carlone</a> at the <a href="https://www.mit.edu/">Massachusetts Institute of Technology (MIT)</a>.
         Before that, he was a postdoctoral fellow at MIT SPARK and briefly a postdoctoral researcher at the <a
           href="https://asl.ethz.ch/">Autonomous
-          Systems Lab (ASL)</a> lead by
+          Systems Lab (ASL)</a> led by
         <a href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
           Roland Siegwart</a> at <a href="https://ethz.ch/en.html">ETH Zürich</a>.
         He earned his PhD in 2022 from ETH Zürich,
@@ -75,7 +75,7 @@
           Nieto</a>, where he also obtained his M.Sc. in Robotics, Systems, and Control (RSC) in 2019.
         During his PhD, he was a visiting researcher at the <a
           href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/">Microsoft
-          Mixed Reality and AI Lab</a> lead by <a href="https://people.inf.ethz.ch/pomarc/">Prof. Marc
+          Mixed Reality and AI Lab</a> led by <a href="https://people.inf.ethz.ch/pomarc/">Prof. Marc
           Pollefeys</a>.
       </p>
 
