--- a/bio.html
+++ b/bio.html
@@ -117,6 +117,7 @@
       <h1>Awards and Recognitions</h1>
       Selected awards and recognitions:
       <ul>
+        <li><strong>NOKOV Next Generation Star</strong> at <a href="https://roboticsconference.org/program/pioneers/">IEEE/RSJ Int. Conf. on Robotics and intelligent Systems (IROS)</a>, 2025.</li>
         <li><strong>RSS: Pioneer</strong> at <a href="https://roboticsconference.org/program/pioneers/">Robotics:
             Science and Systems (RSS)</a>, 2025.</li>
         <li><strong>Outstanding Systems Paper Award</strong> at <a href="https://roboticsconference.org/"> Robotics:
