--- a/bio.html
+++ b/bio.html
@@ -58,11 +58,11 @@
       <header class="major">
         <h1>Biography</h1>
       </header>
-      <p>Lukas Schmid is currently a research scientist at the <a href="https://web.mit.edu/sparklab/">MIT
+      <p>Lukas Schmid is a Research Scientist at the <a href="https://web.mit.edu/sparklab/">MIT
           SPARK</a> Lab led
         by <a href="https://lucacarlone.mit.edu/">Prof. Luca
           Carlone</a> at the <a href="https://www.mit.edu/">Massachusetts Institute of Technology (MIT)</a>.
-        Before that, he was a postdoctoral fellow at MIT SPARK and briefly a postdoctoral researcher at the <a
+        Before, he was a postdoctoral fellow at MIT SPARK and a postdoctoral researcher at the <a
           href="https://asl.ethz.ch/">Autonomous
           Systems Lab (ASL)</a> led by
         <a href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
@@ -79,9 +79,9 @@
           Pollefeys</a>.
       </p>
 
-      <p> His work has been recognized with several awards and honors, including the <a
+      <p> His work has been recognized with several awards and honors, including <a href="www.iros25.org">NOKOV New Generation Star</a> at <a href="www.iros25.org">IROS 2025</a>, <a href="https://roboticsconference.org/program/pioneers/">RSS: Pioneers 2025</a>, the <a
           href="https://github.com/MIT-SPARK/Khronos">Outstanding Systems Paper Award</a> at <a
-          href="https://roboticsconference.org/">Robotics: Science and Systems (RSS)</a>, the <a
+          href="https://roboticsconference.org/">RSS 2024</a>, the <a
           href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal.html">ETH Medal</a>
         for outstanding PhD theses, the <a
           href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html">ETH
@@ -90,19 +90,10 @@
           Prize</a> for the best graduate of the year at ETH, the first place in the <a
           href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/overview">2024
           Hilti SLAM challenge</a>, and a <a href="https://data.snf.ch/grants/grant/214489">Swiss National Science
-          Foundation</a> postdoc-mobility fellowship.
+          Foundation</a> postdoc fellowship.
       </p>
 
-      <p> His main research interests is in autonomy for intelligent mobile systems, where he focuses on active and
-        passive 3D
-        perception and understanding of complex, dynamic, and changing environments for robotic interaction and
-        augmented reality. This includes research on dense geometric and semantic scene representations, scene
-        abstraction and understanding, as well as detection and prediction of moving and changing entities.
-        He complements this with research on lifelong learning and mapping, as well as active path planning to build
-        these representations autonomously in unknown environments and enable continuous improvement of a robot's scene
-        model and perception capabilities.
-        While his work is grounded in rigorous theory, his methods are demonstrated on-board fully autonomous mobile
-        robots and drones in complex real-world scenarios.
+      <p> His research focuses on embodied spatio-temporal AI for human-centric robot autonomy. This includes research on scene representations and abstraction, on detection, prediction, and understanding of moving and changing entities, active perception and information gathering, as well as lifelong learning for continuous adaptation to the robot environment, embodiment, task, and human preference.
       </p>
 
       <ul class="actions">
@@ -117,7 +108,7 @@
       <h1>Awards and Recognitions</h1>
       Selected awards and recognitions:
       <ul>
-        <li><strong>NOKOV Next Generation Star</strong> at <a href="https://roboticsconference.org/program/pioneers/">IEEE/RSJ Int. Conf. on Robotics and intelligent Systems (IROS)</a>, 2025.</li>
+        <li><strong>NOKOV New Generation Star</strong> at <a href="www.iros25.org">IEEE/RSJ Int. Conf. on Robotics and intelligent Systems (IROS)</a>, 2025.</li>
         <li><strong>RSS: Pioneer</strong> at <a href="https://roboticsconference.org/program/pioneers/">Robotics:
             Science and Systems (RSS)</a>, 2025.</li>
         <li><strong>Outstanding Systems Paper Award</strong> at <a href="https://roboticsconference.org/"> Robotics:
